   treatment as Python code in template expressions, i.e. item and attribute
   access are no longer interchangeable (which was broken in a number of ways
   anyway, see ticket #113). This change does not affect expressions.
 * Numerous fixes for the execution of Python code in `<?python ?>` processing
   instructions (tickets #113 and #114).


Version 0.4
http://svn.edgewall.org/repos/genshi/tags/0.4.0/
(Apr 16 2007, from branches/stable/0.4.x)

 * New example applications for CherryPy and web.py.
 * The template loader now uses a LRU cache to limit the number of cached
   templates to a configurable maximum. Also, a race condition in the template
   loader was fixed by adding locking.
 * A new filter (genshi.filters.HTMLFormFiller) was added, which can populate 
   HTML forms based on a dictionary of values.
 * The set of permitted tag and attribute names for the HTMLSanitizer can now
   be configured per instance.
 * The template engine plugin now supports a range of options for
   configuration, for example to set the default serialization method, the
   default output encoding, or the default DOCTYPE.
 * The ElementTree adaptation function `ET()` has moved into the `genshi.input`
   module.
 * Allow `when` directives to omit the test expression as long as the
   associated choose directive does have one. In that case, the when branch is
   followed if the expression of the choose directive evaluates to a truth
   value.
 * Unsuccessful attribute or item lookups now return `Undefined` objects for
   nicer error messages.
 * Split up the `genshi.template` module into multiple modules inside the new
   `genshi.template` package.
 * Results of expression evaluation are no longer implicitly called if they
   are callable.
 * Instances of the `genshi.core.Attrs` class are now immutable (they are
   subclasses of `tuple` instead of `list`).
 * `MarkupTemplate`s can now be instantiated from markup streams, in addition
   to strings and file-like objects (ticket #69).